--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         </header>
         <main>
             <p>
-                Welcome to My Website. You can see here my progress.
+                Welcome to My Website.
+            </p>
+            <p>
+                You can see my progress here.
             </p>
         </main>
         <footer>
